deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skillbox-api
  namespace: sandbox
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 9090
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/name: skillbox
